FIX-CSS-ScrollBar-Mobile - Add package-lock.json to the project for library installation compatibility - Fixed layout in the mobile version

--- a/src/components/mission-card/mission-card.less
+++ b/src/components/mission-card/mission-card.less
@@ -8,7 +8,7 @@
   background: #2e2e2e;
   border-radius: 5px;
   border: none;
-  max-width: 400px;
+  // max-width: 400px;
   padding: 20px;
   color: white;
 
@@ -47,7 +47,10 @@
     }
   }
 
-
+  .shevron {
+    display: flex;
+    align-items: center;
+  }
   .icon {
     cursor: pointer;
     height: 1.5rem;
